# fvm-rs

./: CLAUDE.md  Cargo.toml  LICENSE
src/: config_manager.rs  gitignore_manager.rs  ide_manager.rs  main.rs  sdk_manager.rs  utils.rs
src/commands/: api.rs  config.rs  dart.rs  destroy.rs  doctor.rs  exec.rs  flavor.rs  flutter.rs  fork.rs  global.rs  install.rs  list.rs  ls.rs  mod.rs  releases.rs  remove.rs  rm.rs  spawn.rs  use.rs
