[package]
name = "fvm-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
git2 = "0.20.2"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version ="1.0.219", features = ["derive"] }
serde_json = "1.0"
sys-info = "0.9.1"
tabled = { version = "0.20.0", features = ["ansi"] }
tokio = { version = "1.46.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = "4.2.0"
